<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.github.binpower93.hilttest.ui.newnote.NewNoteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.newnote.NewNoteActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/note_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorText="@{viewModel.titleError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.title}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteContent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/note_content"
            app:errorText="@{viewModel.contentError}"
            app:layout_constraintEnd_toEndOf="@+id/noteTitle"
            app:layout_constraintStart_toStartOf="@+id/noteTitle"
            app:layout_constraintTop_toBottomOf="@+id/noteTitle"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteContentText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.content}"
                android:minLines="5"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/common_save"
            android:enabled="@{viewModel.canSubmit, default=false}"
            android:onClick="@{ () -> viewModel.submit() }"
            android:visibility="@{viewModel.saveVisibility, default=visible}"
            app:layout_constraintTop_toBottomOf="@id/noteContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:icon="@drawable/ic_twotone_save_24" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="@{viewModel.savingVisibility, default=gone}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteContent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>