<resources>
    <string name="app_name">HiltTest</string>

    <string name="common_retry">Retry</string>

    <string name="posts_error">An error occurred while loading the posts</string>
    <string name="error_title_needed">A title is needed</string>
    <string name="error_content_needed">Some content is needed</string>
    <string name="common_save">Save</string>
    <string name="error_failed_to_save">Failed to save</string>
    <string name="note_content">Note Content</string>
    <string name="note_title">Note Title</string>
    <string name="new_note">New Note</string>
    <string name="empty_state_title">Welcome to the notes app</string>
    <string name="empty_state_description">To add your first note click on the NEW NOTE button below</string>
</resources>